Merge nightly.sh from experimental; for PermGen