@@ -11,5 +11,8 @@ BUILD_VERSION="${REL_VERSION}-${buildNumber}"
 echo "REL_VERSION: ${REL_VERSION}"
 echo "BUILD_VERSION: ${BUILD_VERSION}"
 
+set -x verbose
+export MAVEN_OPTS="-XX:MaxPermSize=128M" 
 mvn -Dbelframework-release.version=${BUILD_VERSION} \
     -Pdistribution clean package assembly:assembly
+
